# SwamBoids

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Boids/include/: Boid.h  Flock.h  KDTree.h  Simulation.h  Vector2D.h
Boids/pybinds/: BoidModule.cpp  FlockModule.cpp  Geometry.cpp  KDTreeModule.cpp  SimulationModule.cpp  Vector2DModule.cpp
Boids/src/: Boid.cpp  Flock.cpp  KDTree.cpp  Simulation.cpp
PyModule/: check_env.py  main.py  test.py  testEnv.py  test_env.py  test_model.py  test_simulation.py  training.py
PyModule/binaries/: __init__.py
PyModule/config/: __init__.py
PyModule/gymBoidEnv/: BoidEnv.py  EnvStructs.py  Structs.py  __init__.py  boid_utils.py  flocking_algorithm.py  reward_flocking_algorithm.py  reward_function.py  structs.py
PyModule/gymEnv/: BoidEnv.py
PyModule/trained_models/flocking_algorithm/: evaluations.npz  events.out.tfevents.1646767877.Simons-MacBook-Pro.local.12848.0  progress.csv
PyModule/trained_models/flocking_algorithm_1/: evaluations.npz  events.out.tfevents.1646809224.Simons-MacBook-Pro.local.14540.0  progress.csv
dependencies/openMP/lib/: libomp.dylib
dependencies/pybind11-master/include/pybind11/: stl.h
